name:           vault-trans
version:        0.1.0.1
synopsis:       A monad transformer for vault-tool
homepage:       bitnomial.com
license-file:   LICENSE
author:         Michael Dunn
maintainer:     michael@bitnomial.com
build-type:     Simple
cabal-version:  >= 1.10

library
  hs-source-dirs:   src/lib
  default-language: Haskell2010
  ghc-options:
    -Wall -fwarn-tabs -fno-warn-unused-do-bind
    -funbox-strict-fields -O2

  exposed-modules: Network.VaultTool.Trans
                 , Network.VaultTool.Trans.Database
                 , Network.VaultTool.Trans.Database.Postgresql

  build-depends: base                 >= 4.8     && < 4.12
               , aeson                >= 1.2     && < 1.5
               , containers           >= 0.5     && < 0.6
               , postgresql-simple    >= 0.5     && < 0.6
               , text                 >= 1.2     && < 1.3
               , transformers         >= 0.4     && < 0.6
               , unordered-containers >= 0.2.6   && < 0.3
               , vault-tool           >= 0.0     && < 0.2
